kubernetes/apps/gotify/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify-deployment
  labels:
    app: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/data
              name: gotify-data
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: gotify-svc
  labels:
    app: gotify
spec:
  type: ClusterIP
  selector:
    app: gotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
