kubernetes/apps/gotify/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-gotify
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx 
  rules:
  - host: gotify.ninebasetwo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gotify-svc
            port:
              number: 80
  tls:
  - hosts:
    - gotify.ninebasetwo.net
    secretName: gotify-tls
